# 2048cpp

./: .gitignore  README.md
game/: 2048cpp.code-workspace  CMakeLists.txt  main.cpp
game/include/: field.h
game/include/src/: field.cpp  main.cpp
game/src/: field.cpp  game.cpp  main.cpp  spawn_print.cpp  swipes.cpp
